NetBSD Problem Report #50362

From www@NetBSD.org  Fri Oct 23 08:38:21 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 7C194A5B2E
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 23 Oct 2015 08:38:21 +0000 (UTC)
Message-Id: <20151023083819.5BBBDA65E6@mollari.NetBSD.org>
Date: Fri, 23 Oct 2015 08:38:19 +0000 (UTC)
From: maxv@netbsd.org
Reply-To: maxv@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: KASSERT panic with nouveau: "!cold"
X-Send-Pr-Version: www-1.0

>Number:         50362
>Category:       kern
>Synopsis:       KASSERT panic with nouveau: "!cold"
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Oct 23 08:40:00 +0000 2015
>Closed-Date:    Thu Nov 26 09:46:44 +0000 2015
>Last-Modified:  Wed Jan 27 19:25:01 +0000 2016
>Originator:     Maxime
>Release:        CURRENT-amd64
>Organization:
>Environment:
Just a CURRENT kernel, with nouveau enabled in GENERIC.
>Description:
GPU: Nvidia GTX 550 Ti

When booting, the kernel panics with:

panic: kernel diagnostic assertion "!cold" failed: file "/usr/src/sys/external/bsd/drm2/dist/drm/nouveau/core/engine/fifo/nouveau_engine_fifo_nvc0.c", line 124.

DMESG (generated from the 7.0-release kernel):

Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
    2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015
    The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 7.0 (GENERIC.201509250726Z)
total memory = 4094 MB
avail memory = 3957 MB
kern.module.path=/stand/amd64/7.0/modules
timecounter: Timecounters tick every 10.000 msec
timecounter: Timecounter "i8254" frequency 1193182 Hz quality 100
System manufacturer System Product Name (System Version)
mainbus0 (root)
ACPI: RSDP 0xfb510 000024 (v02 ACPIAM)
ACPI: XSDT 0xcfe80100 00005C (v01 081910 XSDT1732 20100819 MSFT 00000097)
ACPI: FACP 0xcfe80290 0000F4 (v03 081910 FACP1732 20100819 MSFT 00000097)
ACPI BIOS Warning (bug): Optional FADT field Pm2ControlBlock has zero address or length: 0x0000000000000000/0x1 (20131218/tbfadt-664)
ACPI BIOS Warning (bug): 32/64X length mismatch in FADT/Gpe0Block: 64/32 (20131218/tbfadt-634)
ACPI: DSDT 0xcfe80450 00DB3A (v01  A1540 A1540001 00000001 INTL 20060113)
ACPI: FACS 0xcfe98000 000040
ACPI: APIC 0xcfe80390 00007C (v01 081910 APIC1732 20100819 MSFT 00000097)
ACPI: MCFG 0xcfe80410 00003C (v01 081910 OEMMCFG  20100819 MSFT 00000097)
ACPI: OEMB 0xcfe98040 000072 (v01 081910 OEMB1732 20100819 MSFT 00000097)
ACPI: SRAT 0xcfe8f650 0000D8 (v01 AMD    FAM_F_10 00000002 AMD  00000001)
ACPI: HPET 0xcfe8f730 000038 (v01 081910 OEMHPET  20100819 MSFT 00000097)
ACPI: SSDT 0xcfe8f770 000672 (v01 A M I  POWERNOW 00000001 AMD  00000001)
ACPI: All ACPI Tables successfully acquired
ioapic0 at mainbus0 apid 3: pa 0xfec00000, version 0x21, 24 pins
cpu0 at mainbus0 apid 0: AMD Athlon(tm) II X3 455 Processor, id 0x100f53
cpu0: SVM disabled by the BIOS
cpu1 at mainbus0 apid 1: AMD Athlon(tm) II X3 455 Processor, id 0x100f53
cpu2 at mainbus0 apid 2: AMD Athlon(tm) II X3 455 Processor, id 0x100f53
acpi0 at mainbus0: Intel ACPICA 20131218
acpi0: X/RSDT: OemId <081910,XSDT1732,20100819>, AslId <MSFT,00000097>
acpi0: SCI interrupting at int 9
timecounter: Timecounter "ACPI-Fast" frequency 3579545 Hz quality 1000
hpet0 at acpi0: high precision event timer (mem 0xfed00000-0xfed00400)
timecounter: Timecounter "hpet0" frequency 14318180 Hz quality 2000
attimer1 at acpi0 (TMR, PNP0100): io 0x40-0x43 irq 0
pcppi1 at acpi0 (SPKR, PNP0800): io 0x61
midi0 at pcppi1: PC speaker
sysbeep0 at pcppi1
LPTE (PNP0400) at acpi0 not configured
aibs0 at acpi0 (ASOC, ATK0110-16843024): ASUSTeK AI Booster
pckbc1 at acpi0 (PS2K, PNP0303) (kbd port): io 0x60,0x64 irq 1
UAR1 (PNP0501) at acpi0 not configured
OMSC (PNP0C02) at acpi0 not configured
RMSC (PNP0C02) at acpi0 not configured
SIOR (PNP0C02) at acpi0 not configured
PCIE (PNP0C02) at acpi0 not configured
RMEM (PNP0C01) at acpi0 not configured
acpibut0 at acpi0 (PWRB, PNP0C0C-170): ACPI Power Button
acpiwmi0 at acpi0 (AOD, PNP0C14-0): ACPI WMI Interface
acpiwmibus at acpiwmi0 not configured
ACPI: Enabled 1 GPEs in block 00 to 1F
ACPI Exception: AE_NOT_FOUND, While evaluating Sleep State [\_S2_] (20131218/hwxface-646)
attimer1: attached to pcppi1
pckbd0 at pckbc1 (kbd slot)
pckbc1: using irq 1 for kbd slot
wskbd0 at pckbd0: console keyboard
pci0 at mainbus0 bus 0: configuration mode 1
pci0: i/o space, memory space enabled, rd/line, rd/mult, wr/inv ok
pchb0 at pci0 dev 0 function 0: vendor 0x1002 product 0x5957 (rev. 0x00)
ppb0 at pci0 dev 2 function 0: vendor 0x1002 product 0x5978 (rev. 0x00)
ppb0: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x16 @ 5.0GT/s
ppb0: link is x1 @ 2.5GT/s
pci1 at ppb0 bus 1
pci1: i/o space, memory space enabled, rd/line, wr/inv ok
vga0 at pci1 dev 0 function 0: vendor 0x10de product 0x1244 (rev. 0xa1)
wsdisplay0 at vga0 kbdmux 1: console (80x25, vt100 emulation), using wskbd0
wsmux1: connecting to wsdisplay0
drm at vga0 not configured
hdaudio0 at pci1 dev 0 function 1: HD Audio Controller
hdaudio0: interrupting at ioapic0 pin 19
hdafg0 at hdaudio0: NVIDIA GT5xx HDMI/DP
hdafg0: DP00 8ch: Digital Out [Jack]
hdafg0: 8ch/0ch 48000Hz PCM16*
hdafg1 at hdaudio0: NVIDIA GT5xx HDMI/DP
hdafg1: DP00 8ch: Digital Out [Jack]
hdafg1: 8ch/0ch 48000Hz PCM16*
hdafg2 at hdaudio0: NVIDIA GT5xx HDMI/DP
hdafg2: DP00 8ch: Digital Out [Jack]
hdafg2: 8ch/0ch 48000Hz PCM16*
hdafg3 at hdaudio0: NVIDIA GT5xx HDMI/DP
hdafg3: DP00 8ch: Digital Out [Jack]
hdafg3: 8ch/0ch 48000Hz PCM16*
ppb1 at pci0 dev 10 function 0: vendor 0x1002 product 0x597f (rev. 0x00)
ppb1: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x1 @ 5.0GT/s
ppb1: link is x1 @ 2.5GT/s
pci2 at ppb1 bus 2
pci2: i/o space, memory space enabled, rd/line, wr/inv ok
re0 at pci2 dev 0 function 0: RealTek 8168/8111 PCIe Gigabit Ethernet (rev. 0x03)
re0: interrupting at ioapic0 pin 18
re0: Ethernet address bc:ae:c5:89:c4:c6
re0: using 256 tx descriptors
rgephy0 at re0 phy 7: RTL8169S/8110S/8211 1000BASE-T media interface, rev. 2
rgephy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto
ixpide0 at pci0 dev 17 function 0: ATI Technologies IXP IDE Controller (rev. 0x00)
ixpide0: bus-master DMA support present
ixpide0: primary channel configured to native-PCI mode
ixpide0: using ioapic0 pin 22 for native-PCI interrupt
atabus0 at ixpide0 channel 0
ixpide0: secondary channel configured to native-PCI mode
atabus1 at ixpide0 channel 1
ohci0 at pci0 dev 18 function 0: vendor 0x1002 product 0x4397 (rev. 0x00)
ohci0: interrupting at ioapic0 pin 16
ohci0: OHCI version 1.0, legacy support
usb0 at ohci0: USB revision 1.0
ohci1 at pci0 dev 18 function 1: vendor 0x1002 product 0x4398 (rev. 0x00)
ohci1: interrupting at ioapic0 pin 16
ohci1: OHCI version 1.0, legacy support
usb1 at ohci1: USB revision 1.0
ehci0 at pci0 dev 18 function 2: vendor 0x1002 product 0x4396 (rev. 0x00)
ehci0: interrupting at ioapic0 pin 17
ehci0: dropped intr workaround enabled
ehci0: EHCI version 1.0
ehci0: companion controllers, 3 ports each: ohci0 ohci1
usb2 at ehci0: USB revision 2.0
ohci2 at pci0 dev 19 function 0: vendor 0x1002 product 0x4397 (rev. 0x00)
ohci2: interrupting at ioapic0 pin 18
ohci2: OHCI version 1.0, legacy support
usb3 at ohci2: USB revision 1.0
ohci3 at pci0 dev 19 function 1: vendor 0x1002 product 0x4398 (rev. 0x00)
ohci3: interrupting at ioapic0 pin 18
ohci3: OHCI version 1.0, legacy support
usb4 at ohci3: USB revision 1.0
ehci1 at pci0 dev 19 function 2: vendor 0x1002 product 0x4396 (rev. 0x00)
ehci1: interrupting at ioapic0 pin 19
ehci1: dropped intr workaround enabled
ehci1: EHCI version 1.0
ehci1: companion controllers, 3 ports each: ohci2 ohci3
usb5 at ehci1: USB revision 2.0
piixpm0 at pci0 dev 20 function 0: vendor 0x1002 product 0x4385 (rev. 0x3c)
piixpm0: interrupting at SMI, polling
iic0 at piixpm0: I2C bus
ixpide1 at pci0 dev 20 function 1: ATI Technologies IXP IDE Controller (rev. 0x00)
ixpide1: bus-master DMA support present
ixpide1: primary channel configured to compatibility mode
ixpide1: primary channel interrupting at ioapic0 pin 14
atabus2 at ixpide1 channel 0
ixpide1: secondary channel configured to compatibility mode
ixpide1: secondary channel interrupting at ioapic0 pin 15
atabus3 at ixpide1 channel 1
hdaudio1 at pci0 dev 20 function 2: HD Audio Controller
hdaudio1: interrupting at ioapic0 pin 16
hdafg4 at hdaudio1: VIA VT1708S
hdafg4: DAC00 2ch: Speaker [Jack], HP Out [Jack]
hdafg4: ADC01 2ch: Line In [Jack], Mic In [Jack]
hdafg4: DIG02 2ch: Digital Out [Jack]
hdafg4: 2ch/2ch 48000Hz PCM16*
audio0 at hdafg4: full duplex, playback, capture, mmap, independent
pcib0 at pci0 dev 20 function 3: vendor 0x1002 product 0x439d (rev. 0x00)
ppb2 at pci0 dev 20 function 4: vendor 0x1002 product 0x4384 (rev. 0x00)
pci3 at ppb2 bus 3
pci3: i/o space, memory space enabled
ohci4 at pci0 dev 20 function 5: vendor 0x1002 product 0x4399 (rev. 0x00)
ohci4: interrupting at ioapic0 pin 18
ohci4: OHCI version 1.0, legacy support
usb6 at ohci4: USB revision 1.0
pchb1 at pci0 dev 24 function 0: vendor 0x1022 product 0x1200 (rev. 0x00)
pchb2 at pci0 dev 24 function 1: vendor 0x1022 product 0x1201 (rev. 0x00)
pchb3 at pci0 dev 24 function 2: vendor 0x1022 product 0x1202 (rev. 0x00)
amdnb_misc0 at pci0 dev 24 function 3: AMD NB Misc Configuration
amdtemp0 at amdnb_misc0: AMD CPU Temperature Sensors (Family10h)
pchb4 at pci0 dev 24 function 4: vendor 0x1022 product 0x1204 (rev. 0x00)
isa0 at pcib0
lpt0 at isa0 port 0x378-0x37b irq 7
com0 at isa0 port 0x3f8-0x3ff irq 4: ns16550a, working fifo
acpicpu0 at cpu0: ACPI CPU
acpicpu0: C1: HLT, lat   0 us, pow     0 mW
acpicpu0: P0: FFH, lat   4 us, pow 33750 mW, 3300 MHz
acpicpu0: P1: FFH, lat   4 us, pow 25500 mW, 2600 MHz
acpicpu0: P2: FFH, lat   4 us, pow 22440 mW, 2100 MHz
acpicpu0: P3: FFH, lat   4 us, pow 11700 mW,  800 MHz
acpicpu0: T0: I/O, lat   1 us, pow     0 mW, 100 %
acpicpu0: T1: I/O, lat   1 us, pow     0 mW,  88 %
acpicpu0: T2: I/O, lat   1 us, pow     0 mW,  76 %
acpicpu0: T3: I/O, lat   1 us, pow     0 mW,  64 %
acpicpu0: T4: I/O, lat   1 us, pow     0 mW,  52 %
acpicpu0: T5: I/O, lat   1 us, pow     0 mW,  40 %
acpicpu0: T6: I/O, lat   1 us, pow     0 mW,  28 %
acpicpu0: T7: I/O, lat   1 us, pow     0 mW,  16 %
acpicpu1 at cpu1: ACPI CPU
acpicpu2 at cpu2: ACPI CPU
timecounter: Timecounter "clockinterrupt" frequency 100 Hz quality 0
timecounter: Timecounter "TSC" frequency 3314986450 Hz quality 3000
IPsec: Initialized Security Association Processing.
uhub0 at usb0: vendor 0x1002 OHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub0: 3 ports with 3 removable, self powered
uhub1 at usb1: vendor 0x1002 OHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub1: 3 ports with 3 removable, self powered
uhub2 at usb2: vendor 0x1002 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
uhub2: 6 ports with 6 removable, self powered
wd0 at atabus3 drive 1
uhub3 at usb3: vendor 0x1002 OHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub3: 3 ports with 3 removable, self powered
uhub4 at usb4: vendor 0x1002 OHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub4: 3 ports with 3 removable, self powered
uhub5 at usb5: vendor 0x1002 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
uhub5: 6 ports with 6 removable, self powered
uhub6 at usb6: vendor 0x1002 OHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub6: 2 ports with 2 removable, self powered
wd0: <TOSHIBA DT01ACA050>
wd0: drive supports 16-sector PIO transfers, LBA48 addressing
wd0: 465 GB, 969021 cyl, 16 head, 63 sec, 512 bytes/sect x 976773168 sectors
wd0: 32-bit data port
wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133)
wd0(ixpide1:1:1): using PIO mode 4, Ultra-DMA mode 6 (Ultra/133) (using DMA)
Kernelized RAIDframe activated
pad0: outputs: 44100Hz, 16-bit, stereo
audio1 at pad0: half duplex, playback, capture
boot device: wd0
root on wd0a dumps on wd0b
root file system type: ffs
WARNING: clock lost 5015 days
WARNING: using filesystem time
WARNING: CHECK AND RESET THE DATE!
wsdisplay0: screen 1 added (80x25, vt100 emulation)
wsdisplay0: screen 2 added (80x25, vt100 emulation)
wsdisplay0: screen 3 added (80x25, vt100 emulation)
wsdisplay0: screen 4 added (80x25, vt100 emulation)
umass0 at uhub2 port 2 configuration 1 interface 0
umass0: vendor 0x1970 USB DISK 2.0, rev 2.00/1.00, addr 2
umass0: using SCSI over Bulk-Only
scsibus0 at umass0: 2 targets, 1 lun per target
sd0 at scsibus0 target 0 lun 0: <, USB DISK 2.0, PMAP> disk removable
sd0: 3700 MB, 928 cyl, 255 head, 32 sec, 512 bytes/sect x 7579008 sectors


>How-To-Repeat:
Just boot.
>Fix:

>Release-Note:

>Audit-Trail:
From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org
Subject: re: kern/50362: KASSERT panic with nouveau: "!cold"
Date: Mon, 26 Oct 2015 07:44:30 +1100

 this particular bug is fixed in -current, but nouveaudrm is still
 broken.  don't try using it in netbsd-7 until further advice.. once
 it works in -current we'll pullup the necessary fixes.

 thanks


 .mrg.

From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org
Subject: re: kern/50362: KASSERT panic with nouveau: "!cold"
Date: Mon, 26 Oct 2015 07:47:11 +1100

 oh, wait, this is not the same problem i fixed, but class.

 cvs rdiff -u -r1.4 -r1.5 \
     src/sys/external/bsd/drm2/dist/drm/nouveau/core/engine/fifo/nouveau_en=
 gine_fifo_nve0.c

 has the fix for the other version of this code.


 .mrg.

From: "matthew green" <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50362 CVS commit: src/sys/external/bsd/drm2/dist/drm/nouveau/core/engine/fifo
Date: Sun, 25 Oct 2015 21:44:16 +0000

 Module Name:	src
 Committed By:	mrg
 Date:		Sun Oct 25 21:44:16 UTC 2015

 Modified Files:
 	src/sys/external/bsd/drm2/dist/drm/nouveau/core/engine/fifo:
 	    nouveau_engine_fifo_nvc0.c

 Log Message:
 don't try to wait if (cold), spin waiting for registers to clear.

 same as in nouveau_engine_fifo_nve0.c 1.5.  should fix PR#50362.


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.5 \
     src/sys/external/bsd/drm2/dist/drm/nouveau/core/engine/fifo/nouveau_engine_fifo_nvc0.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Sun, 25 Oct 2015 21:47:10 +0000
State-Changed-Why:
this particular error should be fixed.  hopefully enough to have a console
and multi-user.  X doesn't work for me yet, though.


From: Maxime Villard <max@m00nbsd.net>
To: matthew green <mrg@eterna.com.au>, gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: kern/50362: KASSERT panic with nouveau: "!cold"
Date: Sat, 21 Nov 2015 13:42:13 +0100

 Thanks, it works. You can close this PR.

State-Changed-From-To: feedback->closed
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Thu, 26 Nov 2015 09:46:44 +0000
State-Changed-Why:
Submitter verified the problem was fixed.
Thanks.


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50362 CVS commit: [netbsd-7] src/sys/external/bsd/drm2/dist/drm/nouveau/core/engine/fifo
Date: Wed, 27 Jan 2016 19:24:31 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Wed Jan 27 19:24:30 UTC 2016

 Modified Files:
 	src/sys/external/bsd/drm2/dist/drm/nouveau/core/engine/fifo [netbsd-7]:
 	    nouveau_engine_fifo_nvc0.c nouveau_engine_fifo_nve0.c

 Log Message:
 Pull up following revision(s) (requested by riastradh in ticket #1079):
 	sys/external/bsd/drm2/dist/drm/nouveau/core/engine/fifo/nouveau_engine_fifo_nve0.c: revision 1.6
 	sys/external/bsd/drm2/dist/drm/nouveau/core/engine/fifo/nouveau_engine_fifo_nvc0.c: revision 1.5
 don't try to wait if (cold), spin waiting for registers to clear.
 same as in nouveau_engine_fifo_nve0.c 1.5.  should fix PR#50362.
 minor re-format of the previous.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.1.4.2 -r1.1.1.1.4.3 \
     src/sys/external/bsd/drm2/dist/drm/nouveau/core/engine/fifo/nouveau_engine_fifo_nvc0.c
 cvs rdiff -u -r1.1.1.1.4.3 -r1.1.1.1.4.4 \
     src/sys/external/bsd/drm2/dist/drm/nouveau/core/engine/fifo/nouveau_engine_fifo_nve0.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.