don't try to wait if (cold), spin waiting for registers to clear.

same as in nouveau_engine_fifo_nve0.c 1.5.  should fix PR#50362.